deps/v8/test/message/fail/new-target-assignment.out
*%(basename)s:5: SyntaxError: Invalid left-hand side in assignment
function f() { new.target = 5 }
               ^^^^^^^^^^
SyntaxError: Invalid left-hand side in assignment
